Lavet Filehandlers opdelt koden i fornuftige package. 100 andre ting, skulle have gjort det her mere end en gang